2008-09-15  Bradley M. Kuhn  <bkuhn@ebb.org>

	* pokernetwork/pokerservice.py (PokerService.tourneyDestroyGame):
	Adjusted so reactor.callLater() is not used for waits <= 0.
	(PokerService.tourneyNewState): Adjusted so reactor.callLater() is
	not used for waits <= 0.


	* pokernetwork/userstats.py (UserStatsLookup.allStatsAsPacket):
	Wrote method.
	(UserStatsLookup.getSupportedListAsPacket): Wrote method.

	* tests/test-protocol.py.in
	(UGAMEProtocolTestCase.testHandleData): Added three new packets
	per below.

	* pokernetwork/pokerpackets.py (PacketPokerPlayerStats): Created packet.
	(PacketPokerGetStatsSupported): Created packet.
	(PacketPokerStatsSupported): Created packet.

	* tests/test-userstats.py.in
	(PokerUserStatsTestCase.test04_userStatsLookupBaseClass): Wrote test.
	(PokerUserStatsTestCase.test05_userStatsRankPercentileLookupBaseClass):
	Wrote test.
	(PokerUserStatsTestCase.test03_rankPercentileAccessor): Fixed bug
	with assertions related to sort.

	* pokernetwork/userstats.py (UserStatsAccessor.error): Added method.
	(UserStatsAccessor.getStatsValue): Restored strangely deleted method.
	(UserStatsAccessor._lookupValidStat): Restored strangely deleted method.
	(UserStatsLookup.getStatValue): Wrote method.
	(UserStatsLookup.__init__): Wrote method.
	(UserStatsRankPercentileLookup.__init__): Wrote method.
	(UserStatsLookup.allStatsAsPacket): Created stub for method.
	(UserStatsLookup.error): Wrote method.
	(UserStatsLookup.message): Wrore method.

2008-09-15  Loic Dachary <loic@dachary.org>

 	* Release 1.7.0

	* Makefile.am: add userstats.py to the distribution

	* tests/test-pokerservice.py.in: test18_cleanupTourneys_registering
	  must use regular tourneys for testing because sng are always
	  discarded

	* pokernetwork/pokerservice.py, tests/test-servercrash.py.in: fix
	  tournament cleanup (trash running tournaments or sng in
	  registering state)
	* pokernetwork/userstats.py: add message method class
	  UserStatsAccessor: for test purposes
